--- a/preamble.sty
+++ b/preamble.sty
@@ -1,98 +1,9 @@
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
-\ProvidesPackage{preamble}
-[2024/03/05 Preamble]
+\ProvidesPackage{preamble_base}
+[2024/03/27 Preamble]
 
-\author{Giacomo Ellero}
-
-% Math stuff
-\RequirePackage{amsfonts}
-\RequirePackage{amsthm}
-\RequirePackage{amssymb}
-\RequirePackage{amsmath}
-\RequirePackage{mathtools}
-\RequirePackage{commath}
-\RequirePackage{mathrsfs}
-\RequirePackage{bm} % for bold math symbols
-\RequirePackage{physics} % for derivatives
-\RequirePackage{cancel} % for canceling terms
-
-\RequirePackage{parskip} % for no indentation
-\RequirePackage[a4paper,margin=1.5cm]{geometry} % to adjust margins
-\RequirePackage{bookmark} % for pdf bookmarks
-
-\RequirePackage{float} % for H in figures
-\RequirePackage{graphicx} % for images
-\RequirePackage{subfig} % for subfigures
-
-\RequirePackage{dirtytalk} % for quotes
-\RequirePackage[many]{tcolorbox} % for boxes
-\RequirePackage{tikz} % for drawings
-\RequirePackage{enumitem} % for custom lists
-\RequirePackage{fancyhdr} % for headers
-\RequirePackage{hyperref} % for hyperlinks
-
-% Use sans-serif font
-\renewcommand{\familydefault}{\sfdefault}
-
-\hypersetup{
-    colorlinks=true,
-    linkcolor=cyan,
-    urlcolor=blue,
-}
-\urlstyle{same}
-
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\indep}{\perp \!\!\! \perp}
-
-\newcommand{\skiplineafterproof}{$ $\par\nobreak\ignorespaces}
-
-\renewcommand{\Re}{\operatorname{Re}}
-\renewcommand{\Im}{\operatorname{Im}}
-
-\renewcommand{\O}{\mathcal{O}}
-% https://tex.stackexchange.com/questions/191059/how-to-get-a-small-letter-version-of-mathcalo
-\renewcommand{\o}{
-    \mathchoice
-    {{\scriptstyle\mathcal{O}}}% \displaystyle
-    {{\scriptstyle\mathcal{O}}}% \textstyle
-    {{\scriptscriptstyle\mathcal{O}}}% \scriptstyle
-    {\scalebox{.6}{$\scriptscriptstyle\mathcal{O}$}}%\scriptscriptstyle
-}
-
-\newenvironment{absolutelynopagebreak}
-{\par\nobreak\vfil\penalty0\vfilneg
-    \vtop\bgroup}
-{\par\xdef\tpd{\the\prevdepth}\egroup
-    \prevdepth=\tpd}
-
-\pagestyle{fancy}
-% \fancyhf{}
-% \renewcommand{\headrulewidth}{0pt}
-\cfoot{Giacomo Ellero}
-\rfoot{\thepage}
-
-\newtcolorbox{examplebox}[1]{colback=green!5!white,colframe=green!40!black,title={#1},fonttitle=\bfseries,parbox=false}
-\newtcolorbox{notebox}[1]{colback=blue!5!white,colframe=blue!40!black,title={Note: #1},fonttitle=\bfseries,parbox=false}
-\newtcolorbox{bluebox}[1]{colback=blue!5!white,colframe=blue!40!black,title={#1},fonttitle=\bfseries,parbox=false}
-\newtcolorbox{warningbox}[1]{colback=orange!5!white,colframe=orange!90!black,title={Warning: #1},fonttitle=\bfseries,parbox=false}
-
-% I don't really like the `plain` style, I use `definition` even for theorems
-\theoremstyle{definition}
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[theorem]
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{definition}{Definition}[section]
-\newtheorem{example}{Example}[section]
-
-\theoremstyle{remark}
-\newtheorem*{remark}{Remark}
-
-\numberwithin{table}{section}
-\numberwithin{figure}{section}
+\RequirePackage{preamble_base}
+\RequirePackage{preamble_math}
+\RequirePackage{preamble_fancyhdr}
 
 \endinput
