--- a/preamble.sty
+++ b/preamble.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
-\ProvidesPackage{preamble_base}
+\ProvidesPackage{preamble}
 [2024/03/27 Preamble]
 
 \RequirePackage{preamble_base}
